--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -8,9 +8,9 @@
   "LOGIN": "Entrar",
   "SIGNUP": "Cadastre-se",
 
-  "TAB1_TITLE": "Itens",
-  "TAB2_TITLE": "Busca",
-  "TAB3_TITLE": "Configurações",
+  "TAB1_TITLE": "Meu time",
+  "TAB2_TITLE": "Ligas",
+  "TAB3_TITLE": "Jogos",
 
   "MAP_TITLE": "Mapa",
 
