--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -11,6 +11,7 @@
   "TAB1_TITLE": "Meu time",
   "TAB2_TITLE": "Ligas",
   "TAB3_TITLE": "Jogos",
+  "TAB4_TITLE" : "Jogadores",
 
   "MAP_TITLE": "Mapa",
 
